# Nuke-KeenTools

./: .gitignore  README.md
nuke-deps/: DDImage.lib  glew32.lib
nuke-deps/include/Blink/: Blink.h  BlinkBuild.h  BlinkC.h  BlinkConstants.h  BlinkImpl.h  BlinkTypes.h  BlinkVersion.h  BlinkVersionNumbers.h
nuke-deps/include/DDImage/: ARRAY.h  AccountedVector.h  Allocators.h  AnimationHolderI.h  Application.h  ArrayKnobI.h  Attribute.h  AxisOp.h  Axis_KnobI.h  Black.h  Blink.h  BlockAllocator.h  Blur.h  Box.h  Box3.h  BufferIop.h  BufferIopTile.h  CameraOp.h  Channel.h  Channel3D.h  ChannelMap.h  ChannelSet.h  CodecHandler.h  CodecOp.h  ColorKnobI.h  ColorLookup.h  Colorspace_KnobI.h  ComplexLightOp.h  ControlPointCollectionKnobI.h  ConvertibleToIop.h  Convolve.h  CurveI.h  CurveKnobI.h  DDImage_API.h  DDMath.h  DDScript.h  DDString.h  DDWindows.h  DeepAccumPixelOp.h  DeepComposite.h  (+208 more)
nuke-deps/include/DDImage/ReaderExtensions/: ColorCurve.h  DataInfo.h  GenericImagePlane.h  Handle.h  ImageDirection.h  PlanarReadInfo.h  ReaderExtensions.h
nuke-deps/include/EigenPCA-master/: pca.cpp  pca.h
nuke-deps/include/include/: pyconfig.h
nuke-projects/Test/project/: CMakeLists.txt
nuke-projects/Test/project/src/: LogGeo.cpp
nuke-projects/TestBlur/project/: CMakeLists.txt
nuke-projects/TestBlur/project/src/: TestPlugin.cpp
nuke-projects/TestCombineGeometry/project/: CMakeLists.txt  README.md
nuke-projects/TestCombineGeometry/project/src/: CombineGeometry.cpp  CombineGeometry.hpp
nuke-projects/TestCombineMultGeometry/project/: CMakeLists.txt
nuke-projects/TestCombineMultGeometry/project/src/: CombineMultGeometry.cpp  CombineMultGeometry.hpp
nuke-projects/TestCombineMultPCA/project/: CMakeLists.txt
nuke-projects/TestCombineMultPCA/project/src/: CombineMultPCA.cpp  CombineMultPCA.hpp
nuke-projects/TestDoubleImage/project/: CMakeLists.txt
nuke-projects/TestDoubleImage/project/src/: DoubleImage.cpp
nuke-projects/TestPCA/project/: CMakeLists.txt
nuke-projects/TestPCA/project/src/: PCAGeo.cpp  PCAGeo.hpp
nuke-projects/pca_checker/: pca_checker.sln
nuke-projects/pca_checker/pca_checker/: pca_checker.aps  pca_checker.vcxproj  pca_checker.vcxproj.filters  resource.h  test.cpp
nuke-projects/pca_checker/pca_checker/x64/Debug/: vc140.idb
nuke-projects/pca_checker/pca_checker/x64/Debug/pca_checker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pca_checker.lastbuildstate  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
